# sling-britt

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  CMakeSettings.json  main.cxx
src/app/: CMakeLists.txt  app.ixx  app_config.ixx
src/app/sheet/edit/: edit.cxx  edit.ixx  edit_draw.cxx  edit_grid.cxx  edit_level.cxx  edit_menu_down.cxx  edit_menu_right.cxx  edit_menu_up.cxx  edit_tile_set.cxx  edit_typing.cxx  edit_update.cxx
src/app/sheet/game/: aabb.ixx  anim.ixx  camera.ixx  game.cxx  game.ixx  game_draw.cxx  game_load.cxx  game_save.ixx  game_update.cxx  health.ixx  level_config.ixx  multiplane.ixx  particle_system.ixx  quad_tree.ixx
src/app/sheet/menu/: menu.ixx  menu_options.cxx  menu_start.cxx
src/app/sheet/overlay/: overlay.cxx  overlay.ixx
src/app/state/edit/: edit.cxx  edit.ixx  edit_draw.cxx  edit_grid.cxx  edit_level.cxx  edit_menu_down.cxx  edit_menu_right.cxx  edit_menu_up.cxx  edit_tile_set.cxx  edit_typing.cxx  edit_update.cxx
src/app/state/game/: aabb.ixx  anim.ixx  camera.ixx  game.cxx  game.ixx  game_draw.cxx  game_load.cxx  game_save.ixx  game_update.cxx  health.ixx  level_config.ixx  multiplane.ixx  particle_system.ixx  quad_tree.ixx
src/app/state/menu/: menu.cxx  (+3 more)
src/core/: bitmap_text.ixx  circle.ixx  config.ixx  console.ixx  input.ixx  line.ixx  music.ixx  shader.ixx  sheet.ixx  sound.ixx  sprite.ixx  state.ixx  transform.ixx  types.ixx  window.ixx
src/core/config/: sound_config.ixx  sprite_config.ixx  transform_config.ixx
src/core/trait/: input_trait.ixx  sound_trait.ixx  sprite_trait.ixx  transform_trait.ixx
(+168 files in other folders)
