cmake_minimum_required(VERSION 4.0.1)

#if (MSVC)    
    #add_compile_options(/std:c++latest /EHsc /nologo /W4 /c "%VCToolsInstallDir%\modules\std.ixx" /reference "std=std.ifc")
#else()
    
#endif()

project(CMakeSFMLProject LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_SCAN_FOR_MODULES ON)

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../bin)

include(FetchContent)
FetchContent_Declare(SFML
                     GIT_REPOSITORY https://github.com/SFML/SFML.git
                     GIT_TAG 3.0.2
                     GIT_SHALLOW ON
                     EXCLUDE_FROM_ALL
                     SYSTEM
)
FetchContent_MakeAvailable(SFML)

add_subdirectory(core)
add_subdirectory(app)

add_executable(main)
target_sources(main PRIVATE "main.cxx")

target_compile_features(main PRIVATE cxx_std_23)
target_link_libraries(main PRIVATE app)